--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
       integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
-      integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-      crossorigin="anonymous"
-    />
+
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -1241,13 +1236,17 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script>
       // Get the current year for the copyright
-      $('#year').text(new Date().getFullYear());
+      $("#year").text(new Date().getFullYear());
       // init slider
-      $('.slider').slick({
+      $(".slider").slick({
         infinite: true,
         autoplay: true,
         slidesToShow: 3,
         slidesToScroll: 3,
+        prevArrow:
+          '<span class="prev_arrow"><i class="fas fa-angle-left"></i></span>',
+        nextArrow:
+          '<span class="next_arrow"><i class="fas fa-angle-right"></i></span>',
         responsive: [
           {
             breakpoint: 1124,
@@ -1274,16 +1273,16 @@
         ],
       });
       /* for sticky nav */
-      $('.js--sticky-nav').waypoint(
+      $(".js--sticky-nav").waypoint(
         function (direction) {
-          if (direction == 'down') {
-            $('nav').addClass('sticky');
+          if (direction == "down") {
+            $("nav").addClass("sticky");
           } else {
-            $('nav').removeClass('sticky');
+            $("nav").removeClass("sticky");
           }
         },
         {
-          offset: '75%',
+          offset: "75%",
         }
       );
     </script>
